// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Compiler (react) should build the example with config complete.json 1`] = `
Object {
  "3.1036568a2512a0d36a28.css": "09430945f6d192681820f450862ee4f2",
  "3.1036568a2512a0d36a28.js": "4e19d84a7c49ff85a219e9d6a18ce1f7",
  "3.1036568a2512a0d36a28.js.map": "cb74f713d5e48334d21a35234b415db5",
  "4.667bdcd7b22e3ce203be.js": "fae8b53dabea8951184f196df770a62c",
  "4.667bdcd7b22e3ce203be.js.map": "ac94ff7e0c94bca24db198ab285a9b4d",
  "88d1a2f21c621b326cd669a2ce7de023-600.jpg": "88d1a2f21c621b326cd669a2ce7de023",
  "b3b1795f4769fd299a4371f8926077e1-1920.jpg": "b3b1795f4769fd299a4371f8926077e1",
  "c083059d62b42a7792fc8a146d7e2bd8-300.jpg": "c083059d62b42a7792fc8a146d7e2bd8",
  "c8a24f466d0cd570adcc095b800154e8-1200.jpg": "c8a24f466d0cd570adcc095b800154e8",
  "index.html": "6784e73c78da1962b6026150aa44e066",
  "main.f12223c3232b68a5322b.css": "7861def0e3928a6ff8b473840ce73a4e",
  "main.f12223c3232b68a5322b.js": "3d13a49e6341dde0bcfd594c313728ea",
  "main.f12223c3232b68a5322b.js.map": "cb60446bbfaf88fa9ca4fda9769126f7",
  "manifest.cc1486307d9c6237aa35.js": "a21942dafa455f9b8bc8b747877ef21f",
  "manifest.cc1486307d9c6237aa35.js.map": "141b2d5f3cb584681f26494d17bb5f63",
  "sw.js": "b7ce33628ff5d246dba1f3ac09c6f760",
  "vendors.179d3aaeb3c29de477a3.css": "64b2b4fa42c7d558d735e2cd28ecf88a",
  "vendors.179d3aaeb3c29de477a3.js": "cae09aa69059953424deed2d41a39322",
  "vendors.179d3aaeb3c29de477a3.js.map": "b182a95652ba0a70ff885df5699691d7",
}
`;

exports[`Compiler (react) should build the example with config disabled.json 1`] = `
Object {
  "3.1036568a2512a0d36a28.css": "09430945f6d192681820f450862ee4f2",
  "3.1036568a2512a0d36a28.js": "4e19d84a7c49ff85a219e9d6a18ce1f7",
  "3.1036568a2512a0d36a28.js.map": "cb74f713d5e48334d21a35234b415db5",
  "4.667bdcd7b22e3ce203be.js": "fae8b53dabea8951184f196df770a62c",
  "4.667bdcd7b22e3ce203be.js.map": "ac94ff7e0c94bca24db198ab285a9b4d",
  "b02330cbe0a6272c907bdb4e12b97b7c.jpg": "be5bdc38e858972b37353622a1079182",
  "index.html": "0fcb37925640d3c1f50c89bb2827b60e",
  "main.d62af92986519ed94070.css": "7861def0e3928a6ff8b473840ce73a4e",
  "main.d62af92986519ed94070.js": "6beb833e895ef1d14ab2a7d01f49f59f",
  "main.d62af92986519ed94070.js.map": "b2ede8d1becd8d0a54751e7b9927d885",
  "manifest.cc1486307d9c6237aa35.js": "a21942dafa455f9b8bc8b747877ef21f",
  "manifest.cc1486307d9c6237aa35.js.map": "141b2d5f3cb584681f26494d17bb5f63",
  "sw.js": "2601bf59927671302c5d4fb0c106e74d",
  "vendors.179d3aaeb3c29de477a3.css": "64b2b4fa42c7d558d735e2cd28ecf88a",
  "vendors.179d3aaeb3c29de477a3.js": "cae09aa69059953424deed2d41a39322",
  "vendors.179d3aaeb3c29de477a3.js.map": "b182a95652ba0a70ff885df5699691d7",
}
`;

exports[`Compiler (react) should build the example with config from package.json 1`] = `
Object {
  "3.1036568a2512a0d36a28.css": "09430945f6d192681820f450862ee4f2",
  "3.1036568a2512a0d36a28.js": "4e19d84a7c49ff85a219e9d6a18ce1f7",
  "3.1036568a2512a0d36a28.js.map": "cb74f713d5e48334d21a35234b415db5",
  "4.667bdcd7b22e3ce203be.js": "fae8b53dabea8951184f196df770a62c",
  "4.667bdcd7b22e3ce203be.js.map": "ac94ff7e0c94bca24db198ab285a9b4d",
  "88d1a2f21c621b326cd669a2ce7de023-600.jpg": "88d1a2f21c621b326cd669a2ce7de023",
  "b3b1795f4769fd299a4371f8926077e1-1920.jpg": "b3b1795f4769fd299a4371f8926077e1",
  "bar/index.html": "c73f01c3cd9c36a829a5c549c6f63dd5",
  "c083059d62b42a7792fc8a146d7e2bd8-300.jpg": "c083059d62b42a7792fc8a146d7e2bd8",
  "c8a24f466d0cd570adcc095b800154e8-1200.jpg": "c8a24f466d0cd570adcc095b800154e8",
  "icon_128x128.deb0a118869f6d69fcc5e9852ad32d81.png": "deb0a118869f6d69fcc5e9852ad32d81",
  "icon_192x192.f5d0f0f2ed01fca7cb69e70f6af11529.png": "f5d0f0f2ed01fca7cb69e70f6af11529",
  "icon_256x256.4661d370dd248c9f9d48e78c8a07776d.png": "4661d370dd248c9f9d48e78c8a07776d",
  "icon_96x96.1c0003f895382900e1a8ce6fa0a1b672.png": "1c0003f895382900e1a8ce6fa0a1b672",
  "index.html": "138242fd64ea36ef0eb1df3810ef8d24",
  "main.f12223c3232b68a5322b.css": "7861def0e3928a6ff8b473840ce73a4e",
  "main.f12223c3232b68a5322b.js": "3d13a49e6341dde0bcfd594c313728ea",
  "main.f12223c3232b68a5322b.js.map": "cb60446bbfaf88fa9ca4fda9769126f7",
  "manifest.bc9f52edf87c052e960e4516d360c190.json": "bc9f52edf87c052e960e4516d360c190",
  "manifest.cc1486307d9c6237aa35.js": "a21942dafa455f9b8bc8b747877ef21f",
  "manifest.cc1486307d9c6237aa35.js.map": "141b2d5f3cb584681f26494d17bb5f63",
  "sw.js": "fa099e5a683a579689ad54117dff0acb",
  "vendors.179d3aaeb3c29de477a3.css": "64b2b4fa42c7d558d735e2cd28ecf88a",
  "vendors.179d3aaeb3c29de477a3.js": "cae09aa69059953424deed2d41a39322",
  "vendors.179d3aaeb3c29de477a3.js.map": "b182a95652ba0a70ff885df5699691d7",
}
`;

exports[`Compiler (react) should build the example with config image-optimization-disabled.json 1`] = `
Object {
  "3.1036568a2512a0d36a28.css": "09430945f6d192681820f450862ee4f2",
  "3.1036568a2512a0d36a28.js": "4e19d84a7c49ff85a219e9d6a18ce1f7",
  "3.1036568a2512a0d36a28.js.map": "cb74f713d5e48334d21a35234b415db5",
  "4.667bdcd7b22e3ce203be.js": "fae8b53dabea8951184f196df770a62c",
  "4.667bdcd7b22e3ce203be.js.map": "ac94ff7e0c94bca24db198ab285a9b4d",
  "b02330cbe0a6272c907bdb4e12b97b7c.jpg": "be5bdc38e858972b37353622a1079182",
  "index.html": "2c3e5e5e552287e6a2f54ffddd06710c",
  "main.d62af92986519ed94070.css": "7861def0e3928a6ff8b473840ce73a4e",
  "main.d62af92986519ed94070.js": "6beb833e895ef1d14ab2a7d01f49f59f",
  "main.d62af92986519ed94070.js.map": "b2ede8d1becd8d0a54751e7b9927d885",
  "manifest.cc1486307d9c6237aa35.js": "a21942dafa455f9b8bc8b747877ef21f",
  "manifest.cc1486307d9c6237aa35.js.map": "141b2d5f3cb584681f26494d17bb5f63",
  "sw.js": "2601bf59927671302c5d4fb0c106e74d",
  "vendors.179d3aaeb3c29de477a3.css": "64b2b4fa42c7d558d735e2cd28ecf88a",
  "vendors.179d3aaeb3c29de477a3.js": "cae09aa69059953424deed2d41a39322",
  "vendors.179d3aaeb3c29de477a3.js.map": "b182a95652ba0a70ff885df5699691d7",
}
`;

exports[`Compiler (react) should build the example with config manifest.json 1`] = `
Object {
  "3.1036568a2512a0d36a28.css": "09430945f6d192681820f450862ee4f2",
  "3.1036568a2512a0d36a28.js": "4e19d84a7c49ff85a219e9d6a18ce1f7",
  "3.1036568a2512a0d36a28.js.map": "cb74f713d5e48334d21a35234b415db5",
  "4.667bdcd7b22e3ce203be.js": "fae8b53dabea8951184f196df770a62c",
  "4.667bdcd7b22e3ce203be.js.map": "ac94ff7e0c94bca24db198ab285a9b4d",
  "b02330cbe0a6272c907bdb4e12b97b7c.jpg": "be5bdc38e858972b37353622a1079182",
  "icon_128x128.deb0a118869f6d69fcc5e9852ad32d81.png": "deb0a118869f6d69fcc5e9852ad32d81",
  "icon_192x192.f5d0f0f2ed01fca7cb69e70f6af11529.png": "f5d0f0f2ed01fca7cb69e70f6af11529",
  "icon_256x256.4661d370dd248c9f9d48e78c8a07776d.png": "4661d370dd248c9f9d48e78c8a07776d",
  "icon_96x96.1c0003f895382900e1a8ce6fa0a1b672.png": "1c0003f895382900e1a8ce6fa0a1b672",
  "index.html": "0b2751133826ed28309f25963524ce19",
  "main.d62af92986519ed94070.css": "7861def0e3928a6ff8b473840ce73a4e",
  "main.d62af92986519ed94070.js": "6beb833e895ef1d14ab2a7d01f49f59f",
  "main.d62af92986519ed94070.js.map": "b2ede8d1becd8d0a54751e7b9927d885",
  "manifest.bc9f52edf87c052e960e4516d360c190.json": "bc9f52edf87c052e960e4516d360c190",
  "manifest.cc1486307d9c6237aa35.js": "a21942dafa455f9b8bc8b747877ef21f",
  "manifest.cc1486307d9c6237aa35.js.map": "141b2d5f3cb584681f26494d17bb5f63",
  "sw.js": "f9b3fe5c18354a81d3a243203d4109c1",
  "vendors.179d3aaeb3c29de477a3.css": "64b2b4fa42c7d558d735e2cd28ecf88a",
  "vendors.179d3aaeb3c29de477a3.js": "cae09aa69059953424deed2d41a39322",
  "vendors.179d3aaeb3c29de477a3.js.map": "b182a95652ba0a70ff885df5699691d7",
}
`;

exports[`Compiler (react) should build the example with config preload-lazy-chunks.json 1`] = `
Object {
  "3.1036568a2512a0d36a28.css": "09430945f6d192681820f450862ee4f2",
  "3.1036568a2512a0d36a28.js": "4e19d84a7c49ff85a219e9d6a18ce1f7",
  "3.1036568a2512a0d36a28.js.map": "cb74f713d5e48334d21a35234b415db5",
  "4.667bdcd7b22e3ce203be.js": "fae8b53dabea8951184f196df770a62c",
  "4.667bdcd7b22e3ce203be.js.map": "ac94ff7e0c94bca24db198ab285a9b4d",
  "88d1a2f21c621b326cd669a2ce7de023-600.jpg": "88d1a2f21c621b326cd669a2ce7de023",
  "b3b1795f4769fd299a4371f8926077e1-1920.jpg": "b3b1795f4769fd299a4371f8926077e1",
  "c083059d62b42a7792fc8a146d7e2bd8-300.jpg": "c083059d62b42a7792fc8a146d7e2bd8",
  "c8a24f466d0cd570adcc095b800154e8-1200.jpg": "c8a24f466d0cd570adcc095b800154e8",
  "index.html": "6784e73c78da1962b6026150aa44e066",
  "main.f12223c3232b68a5322b.css": "7861def0e3928a6ff8b473840ce73a4e",
  "main.f12223c3232b68a5322b.js": "3d13a49e6341dde0bcfd594c313728ea",
  "main.f12223c3232b68a5322b.js.map": "cb60446bbfaf88fa9ca4fda9769126f7",
  "manifest.cc1486307d9c6237aa35.js": "a21942dafa455f9b8bc8b747877ef21f",
  "manifest.cc1486307d9c6237aa35.js.map": "141b2d5f3cb584681f26494d17bb5f63",
  "sw.js": "70fdfd3a25072383739b658f17276446",
  "vendors.179d3aaeb3c29de477a3.css": "64b2b4fa42c7d558d735e2cd28ecf88a",
  "vendors.179d3aaeb3c29de477a3.js": "cae09aa69059953424deed2d41a39322",
  "vendors.179d3aaeb3c29de477a3.js.map": "b182a95652ba0a70ff885df5699691d7",
}
`;

exports[`Compiler (react) should build the example with config prerender-disabled.json 1`] = `
Object {
  "3.1036568a2512a0d36a28.css": "09430945f6d192681820f450862ee4f2",
  "3.1036568a2512a0d36a28.js": "4e19d84a7c49ff85a219e9d6a18ce1f7",
  "3.1036568a2512a0d36a28.js.map": "cb74f713d5e48334d21a35234b415db5",
  "4.667bdcd7b22e3ce203be.js": "fae8b53dabea8951184f196df770a62c",
  "4.667bdcd7b22e3ce203be.js.map": "ac94ff7e0c94bca24db198ab285a9b4d",
  "88d1a2f21c621b326cd669a2ce7de023-600.jpg": "88d1a2f21c621b326cd669a2ce7de023",
  "b3b1795f4769fd299a4371f8926077e1-1920.jpg": "b3b1795f4769fd299a4371f8926077e1",
  "c083059d62b42a7792fc8a146d7e2bd8-300.jpg": "c083059d62b42a7792fc8a146d7e2bd8",
  "c8a24f466d0cd570adcc095b800154e8-1200.jpg": "c8a24f466d0cd570adcc095b800154e8",
  "index.html": "3845fe24942897587696f9d33ba6415a",
  "main.f12223c3232b68a5322b.css": "7861def0e3928a6ff8b473840ce73a4e",
  "main.f12223c3232b68a5322b.js": "3d13a49e6341dde0bcfd594c313728ea",
  "main.f12223c3232b68a5322b.js.map": "cb60446bbfaf88fa9ca4fda9769126f7",
  "manifest.cc1486307d9c6237aa35.js": "a21942dafa455f9b8bc8b747877ef21f",
  "manifest.cc1486307d9c6237aa35.js.map": "141b2d5f3cb584681f26494d17bb5f63",
  "sw.js": "b7ce33628ff5d246dba1f3ac09c6f760",
  "vendors.179d3aaeb3c29de477a3.css": "64b2b4fa42c7d558d735e2cd28ecf88a",
  "vendors.179d3aaeb3c29de477a3.js": "cae09aa69059953424deed2d41a39322",
  "vendors.179d3aaeb3c29de477a3.js.map": "b182a95652ba0a70ff885df5699691d7",
}
`;
